# lab09

./: CMakeLists.txt  CPackConfig.cmake  README.md
.github/workflows/: actions.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
